# kloc-cli

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml
.claude/progress/argument-value-resolution/: progress-v1.md
.claude/progress/context-remaining-gaps/: progress-v1.md
src/: __init__.py  __main__.py  cli.py
src/graph/: __init__.py  cache.py  calls.py  index.py  loader.py  precompute.py  trie.py
src/models/: __init__.py  edge.py  node.py  output.py  results.py
src/output/: __init__.py  console.py  json_formatter.py  tree.py
src/queries/: __init__.py  base.py  class_context.py  context.py  definition.py  deps.py  graph_utils.py  inherit.py  interface_context.py  method_context.py  overrides.py  owners.py  polymorphic.py  property_context.py  reference_types.py  resolve.py  usages.py  used_by_handlers.py  value_context.py
src/server/: __init__.py  mcp.py
tests/: __init__.py  test_callee_verification.py  test_calls_data.py  test_index.py  test_integration.py  test_output_model.py  test_reference_type.py  test_usage_flow.py
